Added code for importing FakeTrajectory objects generated by random walk notebook.

--- a/fcs_notebook.ipynb
+++ b/fcs_notebook.ipynb
@@ -21,7 +21,7 @@
    "version": "3.6.1"
   },
   "name": "",
-  "signature": "sha256:857beaba82492515bd18217e5a2f9fd365c1b858829ba8593a0303c3dc73389f"
+  "signature": "sha256:12c8d68ad1dfc429a9528ac1b60953e29a09af1f82b2167530d155602ebc8922"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -74,6 +74,8 @@
       " \n",
       "#### \u2612 How do PBC vs unwrapped affect prediction of diffusion constant?\n",
       " - Done. Don't appear to significant affect results.\n",
+      " \n",
+      "#### \u2610 Curve fit method seems to work better for small spot sizes, but 0.5-crossing method seems better for larger spots? Why?\n",
       "     \n",
       "[Checkbox symbols]:<> (\u2612 \u2610)"
      ]
@@ -156,8 +158,8 @@
       "spot_radius = 10 # Currently unused\n",
       "\n",
       "# Coordinates of detection area center (in nanometers)\n",
-      "spotX = 0.0\n",
-      "spotY = 0.0\n",
+      "spotX = 50.0\n",
+      "spotY = 50.0\n",
       "spotZ = 10.0 # This isn't used, since we're looking at 2D membranes"
      ],
      "language": "python",
@@ -176,7 +178,7 @@
      "collapsed": true,
      "input": [
       "#   Radial and axial std. dev.s of the Gaussian beam profile\n",
-      "w_xy = 5\n",
+      "w_xy = 20\n",
       "w_z = 2 # Unused\n",
       "k = w_z/w_xy # Unused, just considering a 2-D membrane"
      ],
@@ -216,7 +218,7 @@
       "CUTOFF = 3\n",
       "\n",
       "# How many lipids to bin into a single trajectory\n",
-      "BIN_SIZE = 100"
+      "BIN_SIZE = 50"
      ],
      "language": "python",
      "metadata": {},
@@ -239,6 +241,7 @@
      "input": [
       "#D = .01 From NIH paper\n",
       "D = .0245\n",
+      "D = .8\n",
       "tauD = w_xy**2 / (4*D)\n",
       "print(\"Expected diffusion time is %.2f nanoseconds\" % tauD)"
      ],
@@ -257,7 +260,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "beam_waists = np.linspace(10,100,10) # In nanometers\n",
+      "beam_waists = np.arange(10,100,5) # In nanometers\n",
       "print(\"beam waist (nm)\".ljust(16) + \"|\" + \"tau_D (ns)\".rjust(15))\n",
       "print(\"-\"*27)\n",
       "for v in beam_waists:\n",
@@ -472,7 +475,7 @@
      "input": [
       "%%time\n",
       "#t = md.load(trajectory_file, top=topology_file)\n",
-      "t = md.load_trr(trr_file, top=topology_file)"
+      "#t = md.load_trr(trr_file, top=topology_file)"
      ],
      "language": "python",
      "metadata": {},
@@ -532,6 +535,53 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "## Import data from Pickle file"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "\n",
+      "\n",
+      "class Atom:\n",
+      "    \n",
+      "    def setIndex(self, i):\n",
+      "        self.index = i\n",
+      "        \n",
+      "class Topology:\n",
+      "    \n",
+      "    def __init__(self, residues):\n",
+      "        self.n_residues = residues\n",
+      "        \n",
+      "class FakeTrajectory:\n",
+      "    \n",
+      "    def initialize(self, coords, walkers):\n",
+      "        self.topology = Topology(walkers)\n",
+      "\n",
+      "        self.topology.atoms = list([Atom() for i in range(walkers)])\n",
+      "        for i in range(walkers):\n",
+      "            self.topology.atoms[i].setIndex(i)\n",
+      "\n",
+      "        self.topology.n_residues = walkers\n",
+      "\n",
+      "        self.xyz = coords\n",
+      "        \n",
+      "    def __len__(self):\n",
+      "        \n",
+      "        return len(self.xyz)\n",
+      "        \n",
+      "import pickle\n",
+      "t = pickle.load(open('../../windrive/linux/output.pkl', 'rb'))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "Create a list of lists to store detected intensity for each lipid.\n",
       "\n",
       "Need to use something like this list comprehension, rather than `[[]] * len(t.topology.residues)` to deep copy the list elements -- otherwise they'll all be aliases of each other!"
@@ -542,7 +592,7 @@
      "collapsed": true,
      "input": [
       "frames = range(0, len(t), STEP)\n",
-      "detections = [ [ [] for x in frames ] for x in t.topology.residues ]"
+      "detections = [ [ [] for x in frames ] for x in range(t.topology.n_residues) ]"
      ],
      "language": "python",
      "metadata": {},
@@ -761,7 +811,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "_x = np.linspace(0, len(t), 2001)\n",
+      "_x = np.arange(0, len(t), 1)\n",
       "\n",
       "plt.subplot(221)\n",
       "plt.xscale('log')\n",
@@ -781,7 +831,7 @@
       "var = [np.sqrt(np.diag(x)) for x in covariances]\n",
       "    \n",
       "print(\"Average D from data was %f +- %f\" % (np.mean(optimals), np.mean(var)))\n",
-      "plt.xlim([10,len(t)])"
+      "plt.xlim([0,len(t)])"
      ],
      "language": "python",
      "metadata": {},
@@ -799,6 +849,7 @@
      "collapsed": false,
      "input": [
       "plt.subplot(222)\n",
+      "\n",
       "\n",
       "autocorrelated = autocorrelate(binned_tot)\n",
       "\n",
@@ -822,7 +873,7 @@
       "\n",
       "plt.fill_between(_x, _y1, _y2)\n",
       "\n",
-      "plt.xlim([10,len(t)])"
+      "plt.xlim([0,len(t)])"
      ],
      "language": "python",
      "metadata": {},
@@ -833,7 +884,9 @@
      "metadata": {},
      "source": [
       "### .5 crossing method\n",
-      "This method determines $\\tau_D$ first by looking for where the normalized autocorrelation crosses 0.5, then computes the diffusion coefficient from that using the same formula as above."
+      "This method determines $\\tau_D$ first by looking for where the normalized autocorrelation crosses 0.5, then computes the diffusion coefficient from that using the same formula as above, solved for $D$\n",
+      "\n",
+      "$D = \\frac{w_{xy}^2}{4 \\tau_D}$"
      ]
     },
     {
@@ -851,20 +904,25 @@
       "\n",
       "crossings = []\n",
       "\n",
-      "guess = 500 # 500 is a magic number, the initial guess for the interpolation. Not great, but it works. Doesn't affect the output.\n",
+      "guess = .1 # 500 is a magic number, the initial guess for the interpolation. Not great, but it works. Doesn't affect the output.\n",
       "\n",
+      "# plt.xscale('log')\n",
       "for _data in binned_dI:\n",
       "    \n",
       "    autocorrelated = autocorrelate(_data)\n",
       "    \n",
       "    interpolated = interp1d(_x, autocorrelated - .5)\n",
-      "    crossings.append(fsolve(interpolated, guess)) \n",
+      "    crossing = fsolve(interpolated,guess)\n",
+      "    crossings.append(crossing)\n",
+      "    \n",
+      "#     plt.plot(_x, autocorrelated)\n",
+      "    \n",
       "\n",
       "calced_D = [w_xy**2 / (4 * x) for x in crossings]\n",
       "    \n",
       "\n",
       "# print(_D)\n",
-      "\n",
+      "print(\"Average tau_D is %f +- %f\" % (np.mean(crossings), np.std(crossings)))\n",
       "print(\"Average diffusion constant is %f +- %f\" % (np.mean(calced_D), np.std(calced_D)))"
      ],
      "language": "python",
@@ -887,10 +945,15 @@
       "autocorrelated = autocorrelate(binned_tot)\n",
       "\n",
       "interpolated = interp1d(_x, autocorrelated - .5)\n",
-      "crossings = fsolve(interpolated, tauD)\n",
+      "crossings = fsolve(interpolated, 1)\n",
       "\n",
       "calced_D = [w_xy**2 / (4 * x) for x in crossings]\n",
       "\n",
+      "plt.xscale('log')\n",
+      "plt.plot(_x, autocorrelated)\n",
+      "plt.plot(_x, autocorr_model(_x, calced_D[0]))\n",
+      "\n",
+      "print(\"Average tau_D is %f +- %f\" % (np.mean(crossings), np.std(crossings)))\n",
       "print(\"Diffusion constant is %f\" % (np.mean(calced_D)))"
      ],
      "language": "python",
@@ -914,9 +977,12 @@
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
      "metadata": {},
-     "source": []
+     "outputs": []
     }
    ],
    "metadata": {}
