Runtime and memory optimization to how trajectories are created for analysis.

--- a/fcs_notebook.ipynb
+++ b/fcs_notebook.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.512405Z",
-     "start_time": "2017-07-27T18:43:18.507003Z"
+     "end_time": "2017-07-31T14:28:40.875906Z",
+     "start_time": "2017-07-31T14:28:40.479647Z"
     },
     "collapsed": true
    },
@@ -87,20 +87,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Notes on input data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.524624Z",
-     "start_time": "2017-07-27T18:43:18.520267Z"
+     "end_time": "2017-07-31T14:28:40.880991Z",
+     "start_time": "2017-07-31T14:28:40.877928Z"
     },
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -111,13 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.547459Z",
-     "start_time": "2017-07-27T18:43:18.531643Z"
+     "end_time": "2017-07-31T14:28:41.170094Z",
+     "start_time": "2017-07-31T14:28:40.882861Z"
     },
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -157,11 +161,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.555659Z",
-     "start_time": "2017-07-27T18:43:18.549997Z"
+     "end_time": "2017-07-31T14:28:41.176282Z",
+     "start_time": "2017-07-31T14:28:41.171803Z"
     },
     "collapsed": true,
     "hidden": true
@@ -188,18 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.567842Z",
-     "start_time": "2017-07-27T18:43:18.562434Z"
+     "end_time": "2017-07-31T14:28:41.187753Z",
+     "start_time": "2017-07-31T14:28:41.178207Z"
     },
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#   Radial and axial std. dev.s of the Gaussian beam profile\n",
-    "FWHM = 75.\n",
+    "FWHM = 25.\n",
     "w_xy = FWHM / (2 * np.sqrt(2 * np.log(2)))\n",
     "w_z = 2 # Unused\n",
     "k = w_z/w_xy # Unused, just considering a 2-D membrane"
@@ -222,11 +226,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.588905Z",
-     "start_time": "2017-07-27T18:43:18.577266Z"
+     "end_time": "2017-07-31T14:28:41.199089Z",
+     "start_time": "2017-07-31T14:28:41.189642Z"
     },
     "collapsed": true
    },
@@ -245,7 +249,7 @@
     "CUTOFF = 2.5\n",
     "\n",
     "# How many lipids to bin into a single trajectory\n",
-    "BIN_SIZE = 50\n",
+    "BIN_SIZE = 1\n",
     "\n",
     "# How many random spots to use\n",
     "N_SPOTS = 1\n",
@@ -267,11 +271,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.599189Z",
-     "start_time": "2017-07-27T18:43:18.594148Z"
+     "end_time": "2017-07-31T14:28:41.208581Z",
+     "start_time": "2017-07-31T14:28:41.200926Z"
     }
    },
    "outputs": [],
@@ -294,11 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.622913Z",
-     "start_time": "2017-07-27T18:43:18.613416Z"
+     "end_time": "2017-07-31T14:28:41.218646Z",
+     "start_time": "2017-07-31T14:28:41.210322Z"
     },
     "hidden": true
    },
@@ -332,11 +336,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.650019Z",
-     "start_time": "2017-07-27T18:43:18.637140Z"
+     "end_time": "2017-07-31T14:28:41.231269Z",
+     "start_time": "2017-07-31T14:28:41.220377Z"
     },
     "collapsed": true
    },
@@ -380,11 +384,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.685768Z",
-     "start_time": "2017-07-27T18:43:18.657253Z"
+     "end_time": "2017-07-31T14:28:41.259097Z",
+     "start_time": "2017-07-31T14:28:41.232729Z"
     },
     "collapsed": true
    },
@@ -436,11 +440,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.702796Z",
-     "start_time": "2017-07-27T18:43:18.687344Z"
+     "end_time": "2017-07-31T14:28:41.273645Z",
+     "start_time": "2017-07-31T14:28:41.260520Z"
     },
     "collapsed": true
    },
@@ -465,11 +469,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.717042Z",
-     "start_time": "2017-07-27T18:43:18.704496Z"
+     "end_time": "2017-07-31T14:28:41.284833Z",
+     "start_time": "2017-07-31T14:28:41.274997Z"
     },
     "collapsed": true
    },
@@ -511,11 +515,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.722707Z",
-     "start_time": "2017-07-27T18:43:18.718724Z"
+     "end_time": "2017-07-31T14:28:41.289815Z",
+     "start_time": "2017-07-31T14:28:41.286362Z"
     },
     "collapsed": true
    },
@@ -544,11 +548,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.743629Z",
-     "start_time": "2017-07-27T18:43:18.737283Z"
+     "end_time": "2017-07-31T14:28:41.297478Z",
+     "start_time": "2017-07-31T14:28:41.291132Z"
     },
     "collapsed": true
    },
@@ -584,11 +588,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.768930Z",
-     "start_time": "2017-07-27T18:43:18.756633Z"
+     "end_time": "2017-07-31T14:28:41.311987Z",
+     "start_time": "2017-07-31T14:28:41.298769Z"
     },
     "collapsed": true
    },
@@ -627,11 +631,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.786879Z",
-     "start_time": "2017-07-27T18:43:18.776908Z"
+     "end_time": "2017-07-31T14:28:41.321802Z",
+     "start_time": "2017-07-31T14:28:41.313268Z"
     },
     "collapsed": true
    },
@@ -673,11 +677,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.809207Z",
-     "start_time": "2017-07-27T18:43:18.799490Z"
+     "end_time": "2017-07-31T14:28:41.331400Z",
+     "start_time": "2017-07-31T14:28:41.322945Z"
     },
     "collapsed": true
    },
@@ -716,11 +720,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.832028Z",
-     "start_time": "2017-07-27T18:43:18.826670Z"
+     "end_time": "2017-07-31T14:28:41.336229Z",
+     "start_time": "2017-07-31T14:28:41.332562Z"
     },
     "hidden": true
    },
@@ -742,11 +746,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.852641Z",
-     "start_time": "2017-07-27T18:43:18.850575Z"
+     "end_time": "2017-07-31T14:28:41.342395Z",
+     "start_time": "2017-07-31T14:28:41.337505Z"
     },
     "collapsed": true,
     "hidden": true
@@ -769,11 +773,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:18.883820Z",
-     "start_time": "2017-07-27T18:43:18.878501Z"
+     "end_time": "2017-07-31T14:28:41.347044Z",
+     "start_time": "2017-07-31T14:28:41.343831Z"
     },
     "collapsed": true,
     "hidden": true
@@ -806,11 +810,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:26.369820Z",
-     "start_time": "2017-07-27T18:43:18.904080Z"
+     "end_time": "2017-07-31T14:39:18.347837Z",
+     "start_time": "2017-07-31T14:39:16.182968Z"
     }
    },
    "outputs": [],
@@ -825,19 +829,19 @@
     "trajectories = []\n",
     "print(int(t.topology.n_residues / BIN_SIZE))\n",
     "\n",
-    "\n",
+    "# BIN_SIZE is used a little differently with this technique -- applies to binning trajectories in the experiment itself, rather than binning experimental data during analysis.\n",
     "import copy\n",
     "for traj in range(int(t.topology.n_residues / BIN_SIZE)):\n",
-    "    _t = copy.deepcopy(t)\n",
-    "#     _t.reduce(BIN_SIZE / t.topology.n_residues)\n",
-    "    _t.xyz = t.xyz[:,BIN_SIZE*traj:BIN_SIZE*(traj+1)]\n",
-    "    _t.topology.n_residues = BIN_SIZE\n",
-    "    print(np.shape(_t.xyz))\n",
-    "    _t.topology.atoms = t.topology.atoms[BIN_SIZE*traj:BIN_SIZE*(traj+1)]\n",
-    "    _t.reindex()\n",
-    "    print(len(_t.topology.atoms))\n",
+    "    _t = trajectory.FakeTrajectory()\n",
+    "    _t.initialize(t.xyz[:,BIN_SIZE*traj:BIN_SIZE*(traj+1)], BIN_SIZE)\n",
+    "#     _t = copy.deepcopy(t)\n",
+    "#     _t.xyz = t.xyz[:,BIN_SIZE*traj:BIN_SIZE*(traj+1)]\n",
+    "#     _t.topology.n_residues = BIN_SIZE\n",
+    "#     _t.topology.atoms = t.topology.atoms[BIN_SIZE*traj:BIN_SIZE*(traj+1)]\n",
+    "#     _t.reindex()\n",
     "    trajectories.append(_t)\n",
-    "N_SPOTS = len(trajectories)"
+    "N_SPOTS = len(trajectories)\n",
+    "print(N_SPOTS)"
    ]
   },
   {
@@ -849,17 +853,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:32.282697Z",
-     "start_time": "2017-07-27T18:43:26.371263Z"
+     "end_time": "2017-07-31T14:39:21.650450Z",
+     "start_time": "2017-07-31T14:39:21.570970Z"
     }
    },
    "outputs": [],
    "source": [
     "%%time\n",
-    "detections = np.full(shape=(N_SPOTS, t.topology.n_residues, int(np.ceil(len(t)/STEP))), fill_value=0.0)\n",
+    "# detections = np.full(shape=(N_SPOTS, t.topology.n_residues, int(np.ceil(len(t)/STEP))), fill_value=0.0)\n",
     "detections = np.full(shape=(len(trajectories), BIN_SIZE, int(np.ceil(len(t)/STEP))), fill_value=0.0)"
    ]
   },
@@ -874,11 +878,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:32.328774Z",
-     "start_time": "2017-07-27T18:43:32.290445Z"
+     "end_time": "2017-07-31T14:39:23.969314Z",
+     "start_time": "2017-07-31T14:39:23.964717Z"
     },
     "collapsed": true
    },
@@ -910,11 +914,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-07-27T18:43:32.388216Z",
-     "start_time": "2017-07-27T18:43:32.331831Z"
+     "end_time": "2017-07-31T14:39:33.487046Z",
+     "start_time": "2017-07-31T14:39:33.478905Z"
     },
     "collapsed": true,
     "hidden": true
@@ -959,7 +963,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:20.911Z"
+     "start_time": "2017-07-31T14:39:35.412Z"
     },
     "collapsed": true
    },
@@ -1013,7 +1017,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:20.937Z"
+     "start_time": "2017-07-31T14:39:35.446Z"
     }
    },
    "outputs": [],
@@ -1040,7 +1044,7 @@
     "# Instead of iterating over each spot, iterate over slices of the trajectory\n",
     "for i in range(len(trajectories)):\n",
     "    jobs += [pool.apply_async(analyze_spot_mp, args=(trajectories[i], spot_center[0], detections_Q, i))]\n",
-    "print([job.get() for job in jobs])\n",
+    "# print([job.get() for job in jobs])\n",
     "pool.close()\n",
     "pool.join()"
    ]
@@ -1050,7 +1054,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:20.965Z"
+     "start_time": "2017-07-31T14:39:35.469Z"
     }
    },
    "outputs": [],
@@ -1060,7 +1064,7 @@
     "\n",
     "# detections = [x for x in iter(detections_Q.get, None)] # This should work, but throws a ValueError. Whatever.\n",
     "for i in range(len(trajectories)):\n",
-    "    print(\"Analyzing queue entry %d\" % i)\n",
+    "#     print(\"Analyzing queue entry %d\" % i)\n",
     "    if detections_Q.empty():\n",
     "        print(\"Queue prematurely empty..\")\n",
     "        break\n",
@@ -1075,7 +1079,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:20.991Z"
+     "start_time": "2017-07-31T14:39:35.496Z"
     }
    },
    "outputs": [],
@@ -1104,7 +1108,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:21.019Z"
+     "start_time": "2017-07-31T14:39:35.527Z"
     },
     "scrolled": true
    },
@@ -1164,25 +1168,45 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:21.047Z"
+     "start_time": "2017-07-31T14:39:35.556Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "detections.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2017-07-31T14:39:35.582Z"
     }
    },
    "outputs": [],
    "source": [
     "n_nonzero = 0\n",
     "n_tot = 0\n",
+    "n_zero = 0\n",
     "\n",
-    "# Get total number of nonzero contributions\n",
-    "for spot_num in range(N_SPOTS):\n",
-    "    for particle in detections[spot_num]:\n",
-    "        _nonzero = [x for x in particle if not x == 0.0 ]\n",
-    "        n_nonzero += len(_nonzero)\n",
-    "        n_tot += len(particle)\n",
+    "# Get the number of particles that don't contribute\n",
+    "for i in range(N_SPOTS):\n",
+    "    n_zero += np.all(detections[i,:,:] == 0)\n",
+    "print(\"%d particles ctontribute intensities to this spot\" % t.n_residues - n_zero)\n",
+    "\n",
+    "\n",
+    "# # Get total number of nonzero contributions\n",
+    "# for spot_num in range(N_SPOTS):\n",
+    "#     for particle in detections[spot_num]:\n",
+    "#         _nonzero = [x for x in particle if not x == 0.0 ]\n",
+    "#         n_nonzero += len(_nonzero)\n",
+    "#         n_tot += len(particle)\n",
     "    \n",
-    "# Get total number of detections\n",
-    "# n_detections = N_SPOTS * t.topology.n_residues * len(t)\n",
+    "# # Get total number of detections\n",
+    "# # n_detections = N_SPOTS * t.topology.n_residues * len(t)\n",
     "\n",
-    "print(\"Average percentage of the %d sampled particles that contribute to intensity is %f%%\" % (t.topology.n_residues, 100 * n_nonzero / n_tot))"
+    "# print(\"Average percentage of the %d sampled particles that contribute to intensity is %f%%\" % (t.topology.n_residues, 100 * n_nonzero / n_tot))"
    ]
   },
   {
@@ -1205,8 +1229,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:21.084Z"
-    }
+     "start_time": "2017-07-31T14:39:35.616Z"
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1238,8 +1263,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:21.111Z"
-    }
+     "start_time": "2017-07-31T14:39:35.644Z"
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1259,7 +1285,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:21.142Z"
+     "start_time": "2017-07-31T14:39:35.680Z"
     }
    },
    "outputs": [],
@@ -1352,7 +1378,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:21.181Z"
+     "start_time": "2017-07-31T14:39:35.724Z"
     },
     "collapsed": true,
     "hidden": true
@@ -1398,7 +1424,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:21.213Z"
+     "start_time": "2017-07-31T14:39:35.758Z"
     },
     "collapsed": true,
     "hidden": true
@@ -1455,8 +1481,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:21.250Z"
+     "start_time": "2017-07-31T14:39:35.797Z"
     },
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -1518,7 +1545,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:21.291Z"
+     "start_time": "2017-07-31T14:39:35.829Z"
     },
     "scrolled": false
    },
@@ -1589,7 +1616,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:21.337Z"
+     "start_time": "2017-07-31T14:39:35.870Z"
     }
    },
    "outputs": [],
@@ -1604,7 +1631,7 @@
     "for spot_num in range(N_SPOTS):\n",
     "    \n",
     "    if np.sum(binned_tot[spot_num]) == 0.0:\n",
-    "        print(\"Spot %d is all 0, setting to NaN\" % spot_num)\n",
+    "#         print(\"Spot %d is all 0, setting to NaN\" % spot_num)\n",
     "        \n",
     "        # If the spot didn't capture any intensity contributions, just set it to NaN.\n",
     "        # NaN values will be ignored when taking the mean. (Thanks, np.nanmean)\n",
@@ -1653,7 +1680,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2017-07-27T18:43:21.382Z"
+     "start_time": "2017-07-31T14:39:35.912Z"
     }
    },
    "outputs": [],
@@ -1736,6 +1763,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   },
   "toc": {
    "colors": {
