Changed Lo_2 location

--- a/fcs_notebook.ipynb
+++ b/fcs_notebook.ipynb
@@ -1029,7 +1029,7 @@
     "# t = pickle.load(open('D4.pkl', 'rb'))\n",
     "# t = pickle.load(open('../../windrive/linux/D15.pkl', 'rb'))\n",
     "# t = pickle.load(open('/home/jd/phd/virtual_fcs/D15.pkl', 'rb'))\n",
-    "t = pickle.load(open('../../windrive/linux/Lo_2.pkl', 'rb'))\n",
+    "t = pickle.load(open('Lo_2.pkl', 'rb'))\n",
     "# print(\"Shape is %s, reducing by %d%%.\" % (np.shape(t.xyz), 100-SAMPLING_RATIO*100))\n",
     "# t.remove(range(50000,len(t)))\n",
     "# t.reduce(SAMPLING_RATIO)\n",
