Final commits of notebooks after finishing my Master's

--- a/random_walker.ipynb
+++ b/random_walker.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-23T21:58:33.076512Z",
-     "start_time": "2019-04-23T21:58:32.874679Z"
-    },
-    "collapsed": true
+     "end_time": "2019-06-28T20:28:01.927390Z",
+     "start_time": "2019-06-28T20:28:01.920827Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -57,17 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-23T21:58:33.080822Z",
-     "start_time": "2019-04-23T21:58:33.078093Z"
-    },
-    "collapsed": true
+     "end_time": "2019-06-28T20:31:40.452691Z",
+     "start_time": "2019-06-28T20:31:40.448228Z"
+    }
    },
    "outputs": [],
    "source": [
-    "N_WALKERS = 1000\n",
+    "N_WALKERS = 50\n",
     "\n",
     "TSTEPS = 150000\n",
     "\n",
@@ -76,13 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-23T21:58:33.091814Z",
-     "start_time": "2019-04-23T21:58:33.082207Z"
-    },
-    "collapsed": true
+     "end_time": "2019-06-28T20:31:41.612740Z",
+     "start_time": "2019-06-28T20:31:41.607938Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -100,11 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-23T21:58:34.603784Z",
-     "start_time": "2019-04-23T21:58:33.093036Z"
+     "end_time": "2019-06-28T20:31:42.495019Z",
+     "start_time": "2019-06-28T20:31:42.384098Z"
     }
    },
    "outputs": [
@@ -113,8 +110,8 @@
      "output_type": "stream",
      "text": [
       "3000.0\n",
-      "CPU times: user 832 ms, sys: 661 ms, total: 1.49 s\n",
-      "Wall time: 1.49 s\n"
+      "CPU times: user 36.9 ms, sys: 70 ms, total: 107 ms\n",
+      "Wall time: 105 ms\n"
      ]
     }
    ],
@@ -130,21 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-23T21:58:59.656791Z",
-     "start_time": "2019-04-23T21:58:34.605340Z"
+     "end_time": "2019-06-28T20:31:43.521880Z",
+     "start_time": "2019-06-28T20:31:42.903771Z"
     },
-    "code_folding": [],
-    "collapsed": true
+    "code_folding": []
    },
    "outputs": [],
    "source": [
     "for w in range(N_WALKERS):\n",
     "    \n",
-    "    xyz[1:,w,0] = np.cumsum(np.cos(np.random.uniform(0,2,TSTEPS-1) * np.pi) * d_scaling )\n",
-    "    xyz[1:,w,1] = np.cumsum(np.sin(np.random.uniform(0,2,TSTEPS-1) * np.pi) * d_scaling )\n",
+    "    rands = np.random.uniform(0,2,TSTEPS-1)\n",
+    "    \n",
+    "    xyz[1:,w,0] = np.cumsum(np.cos(rands * np.pi) * d_scaling )\n",
+    "    xyz[1:,w,1] = np.cumsum(np.sin(rands * np.pi) * d_scaling )\n",
     "    \n",
     "    # Add initial offset\n",
     "    xyz[:,w,0] += np.random.uniform(-_RMSD,_RMSD)\n",
@@ -160,11 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-23T21:58:59.665638Z",
-     "start_time": "2019-04-23T21:58:59.658332Z"
+     "end_time": "2019-06-28T20:31:45.617626Z",
+     "start_time": "2019-06-28T20:31:45.608313Z"
     }
    },
    "outputs": [
@@ -172,25 +170,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSD should be 3000.000000\n",
-      "D is set to 15.000000, calculated at 15.368582\n"
+      "2779.5791548366064\n",
+      "MSD should be 3000.000000, measured at 3000.000000\n",
+      "D is set to 15.000000, calculated at 12.876767\n"
      ]
     }
    ],
    "source": [
     "MSD = np.mean([(xyz[TSTEPS-1,w,0]-xyz[0,w,0])**2 + (xyz[0,w,1] - xyz[TSTEPS-1,w,1])**2 for w in range(N_WALKERS)])\n",
     "\n",
+    "print(np.sqrt(MSD))\n",
     "print(\"MSD should be %f, measured at %f\" % (_RMSD, np.sqrt(TSTEPS * 4 * D)))\n",
     "print(\"D is set to %f, calculated at %f\" % (D, MSD/(4 * TSTEPS)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-23T21:59:13.074823Z",
-     "start_time": "2019-04-23T21:58:59.667053Z"
+     "end_time": "2019-06-28T20:31:46.721393Z",
+     "start_time": "2019-06-28T20:31:46.360082Z"
     }
    },
    "outputs": [
@@ -200,7 +200,7 @@
      "text": [
       "150000\n",
       "150000\n",
-      "1000\n",
+      "50\n",
       "3\n",
       "Written to D15.pkl\n",
       "Done\n"
@@ -218,7 +218,7 @@
     "print(t.topology.n_residues)\n",
     "print(t.topology.atoms[3].index)\n",
     "\n",
-    "with open('/home/jd/phd/virtual_fcs/D%d.pkl' % D, 'wb') as output:\n",
+    "with open('/home/jrusso/D%d2.pkl' % D, 'wb') as output:\n",
     "    import pickle\n",
     "    pickle.dump(t, output)\n",
     "    print(\"Written to D{}.pkl\".format(D))\n",
@@ -487,31 +487,23 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   },
   "toc": {
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "navigate_num": "#000000",
-    "navigate_text": "#333333",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700",
-    "sidebar_border": "#EEEEEE",
-    "wrapper_background": "#FFFFFF"
-   },
-   "moveMenuLeft": true,
+   "base_numbering": 1,
    "nav_menu": {
     "height": "229px",
     "width": "252px"
    },
-   "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
-   "threshold": 4,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
+   "toc_position": {},
    "toc_section_display": "block",
-   "toc_window_display": true,
-   "widenNotebook": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
